# PinyinIME

./: .gitignore  README.md  import-summary.txt
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: Android.mk  CMakeLists.txt
app/src/main/cpp/android/: com_android_inputmethod_pinyin_PinyinDecoderService.cpp
app/src/main/cpp/include/: dictdef.h
app/src/main/cpp/share/: userdict.cpp
app/src/main/res/drawable/: arrow_bg.xml
app/src/main/res/layout/: candidates_container.xml  floating_container.xml  skb_container.xml
app/src/main/res/values/: colors.xml  dimens.xml  strings.xml
app/src/main/res/values-land/: dimens.xml
app/src/main/res/values-port/: dimens.xml
app/src/main/res/values-zh/: bools.xml
app/src/main/res/xml/: method.xml  settings.xml  skb_phone.xml  skb_qwerty.xml  skb_smiley.xml  skb_sym1.xml  skb_sym2.xml  skb_template1.xml
